@@ -1,8 +1,7 @@
 buildscript {
     ext {
         group "ksbysample"
-        version "1.0.2-RELEASE"
-        mainClass = "ksbysample.webapp.bootnpmgeb.Application"
+        version "2.1.4-RELEASE"
     }
     repositories {
         mavenCentral()
@@ -14,32 +13,42 @@ plugins {
     id "java"
     id "eclipse"
     id "idea"
-    id "org.springframework.boot" version "2.0.4.RELEASE"
-    id "io.spring.dependency-management" version "1.0.6.RELEASE"
+    id "org.springframework.boot" version "2.1.4.RELEASE"
+    id "io.spring.dependency-management" version "1.0.7.RELEASE"
     id "groovy"
-    id "net.ltgt.errorprone" version "0.0.14"
+    id "net.ltgt.errorprone" version "0.7.1"
     id "checkstyle"
-    id "com.github.spotbugs" version "1.6.2"
+    id "com.github.spotbugs" version "1.6.9"
     id "pmd"
-    id "com.moowork.node" version "1.2.0"
-    id "com.gorylenko.gradle-git-properties" version "1.5.1"
-    id "com.github.johnrengelman.processes" version "0.5.0"
+    id "com.moowork.node" version "1.3.1"
+    id "com.gorylenko.gradle-git-properties" version "2.0.0"
+// Gradle 5.3 で internal API が変更されて gradle-processes が動かなくなったのでコメントアウトする
+//    id "com.github.johnrengelman.processes" version "0.5.0"
+    id "com.energizedwork.webdriver-binaries" version "1.4"
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 wrapper {
-    gradleVersion = "4.8.1"
+    gradleVersion = "5.3.1"
     distributionType = Wrapper.DistributionType.ALL
 }
 
 [compileJava, compileTestGroovy, compileTestJava]*.options*.encoding = "UTF-8"
 [compileJava, compileTestGroovy, compileTestJava]*.options*.compilerArgs = ["-Xlint:all,-options,-processing,-path"]
-compileJava.options.compilerArgs += [
-        "-Xep:RemoveUnusedImports:WARN"
-        , "-Xep:ParameterName:OFF"
-]
+tasks.named("compileTestJava").configure {
+    options.errorprone.enabled = false
+}
+// --add-opens オプションを複数指定するとエラーが出るのでコメントアウトする
+// https://github.com/gradle/gradle/issues/7045
+// のクローズ待ち？
+//compileTestGroovy {
+//    options.forkOptions.jvmArgs += [
+//            "--add-opens", "java.base/java.util=ALL-UNNAMED",
+//            "--add-opens", "java.base/java.lang.annotation=ALL-UNNAMED"
+//    ]
+//}
 
 // for Doma 2
 // JavaクラスとSQLファイルの出力先ディレクトリを同じにする
@@ -59,19 +68,23 @@ idea {
 }
 
 configurations {
+    // annotationProcessor と testAnnotationProcessor、compileOnly と testCompileOnly を併記不要にする
+    testAnnotationProcessor.extendsFrom annotationProcessor
+    testImplementation.extendsFrom compileOnly
+
     // for Doma 2
     domaGenRuntime
 }
 
 checkstyle {
     configFile = file("${rootProject.projectDir}/config/checkstyle/google_checks.xml")
-    toolVersion = "8.11"
+    toolVersion = "8.19"
     sourceSets = [project.sourceSets.main]
 }
 
 spotbugs {
     // SpotBugs のレポートファイルは Firefox で見ると文字化けしない
-    toolVersion = "3.1.3"
+    toolVersion = "3.1.11"
     ignoreFailures = true
     effort = "max"
     excludeFilter = file("${rootProject.projectDir}/config/spotbugs/spotbugs-exclude-filter.xml")
@@ -85,12 +98,22 @@ tasks.withType(com.github.spotbugs.SpotBugsTask) {
 }
 
 pmd {
-    toolVersion = "6.6.0"
+    toolVersion = "6.13.0"
     sourceSets = [project.sourceSets.main]
     ignoreFailures = true
     consoleOutput = true
     ruleSetFiles = rootProject.files("/config/pmd/pmd-project-rulesets.xml")
     ruleSets = []
+}
+pmdMain {
+    def backupLoggerLevel
+    doFirst {
+        backupLoggerLevel = logger.context.level
+        logger.context.level = LogLevel.QUIET
+    }
+    doLast {
+        logger.context.level = backupLoggerLevel
+    }
 }
 
 repositories {
@@ -100,28 +123,27 @@ repositories {
 dependencyManagement {
     imports {
         // mavenBom は以下の URL のものを使用する
-        // https://repo.spring.io/release/org/springframework/boot/spring-boot-starter-parent/2.0.4.RELEASE/
+        // https://repo.spring.io/release/org/springframework/boot/spring-boot-starter-parent/2.1.4.RELEASE/
         // bomProperty に指定可能な property は以下の URL の BOM に記述がある
-        // https://repo.spring.io/release/org/springframework/boot/spring-boot-dependencies/2.0.4.RELEASE/spring-boot-dependencies-2.0.4.RELEASE.pom
+        // https://repo.spring.io/release/org/springframework/boot/spring-boot-dependencies/2.1.4.RELEASE/spring-boot-dependencies-2.1.4.RELEASE.pom
         mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
+        mavenBom("org.junit:junit-bom:5.4.2")
     }
 }
 
 dependencies {
-    def spockVersion = "1.1-groovy-2.4"
-    def domaVersion = "2.19.2"
-    def lombokVersion = "1.18.0"
-    def errorproneVersion = "2.3.1"
-    def powermockVersion = "2.0.0-beta.5"
+    def spockVersion = "1.3-groovy-2.5"
+    def domaVersion = "2.24.0"
+    def lombokVersion = "1.18.6"
+    def errorproneVersion = "2.3.3"
+    def powermockVersion = "2.0.0"
     def seleniumVersion = "3.13.0"
-    def spotbugsVersion = "3.1.3"
+    def spotbugsVersion = "3.1.11"
 
     // dependency-management-plugin によりバージョン番号が自動で設定されるもの
-    // Appendix F. Dependency versions ( https://docs.spring.io/spring-boot/docs/2.0.4.RELEASE/reference/html/appendix-dependency-versions.html ) 参照
+    // Appendix F. Dependency versions ( https://docs.spring.io/spring-boot/docs/2.1.4.RELEASE/reference/html/appendix-dependency-versions.html ) 参照
     implementation("org.springframework.boot:spring-boot-starter-web")
-    implementation("org.springframework.boot:spring-boot-starter-thymeleaf") {
-        exclude group: "org.codehaus.groovy", module: "groovy"
-    }
+    implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation("org.springframework.boot:spring-boot-starter-freemarker")
     implementation("org.springframework.boot:spring-boot-starter-mail")
@@ -134,21 +156,20 @@ dependencies {
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation("org.springframework.security:spring-security-test")
     testImplementation("org.yaml:snakeyaml")
-    testImplementation("org.mockito:mockito-core")
 
     // dependency-management-plugin によりバージョン番号が自動で設定されないもの、あるいは最新バージョンを指定したいもの
     implementation("com.integralblue:log4jdbc-spring-boot-starter:1.0.2")
-    implementation("org.flywaydb:flyway-core:5.1.4")
+    implementation("org.flywaydb:flyway-core:5.2.4")
     implementation("com.h2database:h2:1.4.192")
     implementation("com.github.rozidan:modelmapper-spring-boot-starter:1.0.0")
-    implementation("com.google.guava:guava:25.1-jre")
-    implementation("org.apache.commons:commons-lang3:3.7")
-    testImplementation("org.dbunit:dbunit:2.5.4")
-    testImplementation("org.assertj:assertj-core:3.10.0")
+    implementation("com.google.guava:guava:27.1-jre")
+    implementation("org.apache.commons:commons-lang3:3.8.1")
+    testImplementation("org.dbunit:dbunit:2.6.0")
+    testImplementation("org.assertj:assertj-core:3.12.2")
     testImplementation("org.spockframework:spock-core:${spockVersion}")
     testImplementation("org.spockframework:spock-spring:${spockVersion}")
     testImplementation("org.jsoup:jsoup:1.11.3")
-    testImplementation("com.icegreen:greenmail:1.5.7")
+    testImplementation("com.icegreen:greenmail:1.5.10")
 
     // for lombok
     annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
@@ -169,7 +190,9 @@ dependencies {
     testImplementation("org.powermock:powermock-api-mockito2:${powermockVersion}")
 
     // for Geb + Spock
-    testImplementation("org.gebish:geb-spock:2.1")
+    testImplementation("org.gebish:geb-spock:2.3.1") {
+        exclude group: "org.codehaus.groovy", module: "groovy-all"
+    }
     testImplementation("org.seleniumhq.selenium:selenium-chrome-driver:${seleniumVersion}")
     testImplementation("org.seleniumhq.selenium:selenium-firefox-driver:${seleniumVersion}")
     testImplementation("org.seleniumhq.selenium:selenium-support:${seleniumVersion}")
@@ -181,28 +204,69 @@ dependencies {
     compileOnly("net.jcip:jcip-annotations:1.0")
     compileOnly("com.github.spotbugs:spotbugs-annotations:${spotbugsVersion}")
     testImplementation("com.google.code.findbugs:jsr305:3.0.2")
+
+    // for JUnit 5
+    // junit-jupiter で junit-jupiter-api, junit-jupiter-params, junit-jupiter-engine の３つが依存関係に追加される
+    testCompile("org.junit.jupiter:junit-jupiter")
+    testRuntime("org.junit.platform:junit-platform-launcher")
+}
+
+def jvmArgsForTask = [
+        "-ea",
+        "-Dfile.encoding=UTF-8",
+        "-Dsun.nio.cs.map=x-windows-iso2022jp/ISO-2022-JP"
+]
+// JDK 11 に変更後、test タスク実行時に groovy と powermock が JDKの内部部分にアクセスするためにコードでリフレクションを使用
+// していて WARNING が出るため、JVM の起動時オプションの --add-opens を指定して WARNING が出ないようにする
+def jvmArgsAddOpens = [
+        "--add-opens=java.base/java.io=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.ref=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+        "--add-opens=java.base/java.net=ALL-UNNAMED",
+        "--add-opens=java.base/java.nio.charset=ALL-UNNAMED",
+        "--add-opens=java.base/java.security=ALL-UNNAMED",
+        "--add-opens=java.base/java.util=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.regex=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.stream=ALL-UNNAMED",
+        "--add-opens=java.desktop/java.beans=ALL-UNNAMED"
+]
+def printTestCount = { desc, result ->
+    if (!desc.parent) { // will match the outermost suite
+        println "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)"
+    }
 }
 
 bootRun {
-    jvmArgs = [
-            "-ea",
-            "-Dfile.encoding=UTF-8",
-            "-Dspring.profiles.active=develop",
-            "-Dsun.nio.cs.map=x-windows-iso2022jp/ISO-2022-JP"
-    ]
+    jvmArgs = jvmArgsForTask +
+            jvmArgsAddOpens +
+            ["-Dspring.profiles.active=develop"]
 }
 
+tasks.withType(Test) {
+    jvmArgs = jvmArgsForTask +
+            jvmArgsAddOpens +
+            ["-Dspring.profiles.active=unittest"]
+}
+task testJUnit4AndSpock(type: Test) {
+    // testJUnit4AndSpock タスクの jvmArgs は tasks.withType(Test) { ... } で定義している
+    exclude "geb/**"
+
+    testLogging {
+        afterSuite printTestCount
+    }
+}
+test.dependsOn testJUnit4AndSpock
 test {
     // test タスクの jvmArgs は tasks.withType(Test) { ... } で定義している
-    exclude "geb/**"
-}
-tasks.withType(Test) {
-    jvmArgs = [
-            "-ea",
-            "-Dfile.encoding=UTF-8",
-            "-Dspring.profiles.active=unittest",
-            "-Dsun.nio.cs.map=x-windows-iso2022jp/ISO-2022-JP"
-    ]
+
+    // for JUnit 5
+    useJUnitPlatform()
+
+    testLogging {
+        afterSuite printTestCount
+    }
 }
 
 //task npmTest(type: NpmTask) {
@@ -217,29 +281,34 @@ task npmBuild(type: Exec) {
 npmBuild.dependsOn npmTest
 processResources.dependsOn npmBuild
 
-// for Geb + Spock Integration Test
-task startServer(type: com.github.jengelman.gradle.plugins.processes.tasks.JavaFork) {
-    jvmArgs = [
-            "-Dspring.profiles.active=develop",
-            "-Dlogging.level.root=OFF",
-            "-Dlogging.level.org.springframework.web=OFF",
-            "-Dlogging.level.jdbc.sqlonly=OFF",
-            "-Dlogging.level.jdbc.sqltiming=OFF",
-            "-Dlogging.level.jdbc.audit=OFF",
-            "-Dlogging.level.jdbc.resultset=OFF",
-            "-Dlogging.level.jdbc.resultsettable=OFF",
-            "-Dlogging.level.jdbc.connection=OFF"
-    ]
-    classpath += sourceSets.main.runtimeClasspath
-    main = "${mainClass}"
-    doLast {
-        Thread.sleep(15000)
-    }
-}
-task stopServer {
-    doLast {
-        startServer.processHandle.abort()
-    }
+// Gradle 5.3 で internal API が変更されて gradle-processes が動かなくなったのでコメントアウトする
+//// for Geb + Spock Integration Test
+//task startServer(type: com.github.jengelman.gradle.plugins.processes.tasks.JavaFork) {
+//    jvmArgs = [
+//            "-Dspring.profiles.active=develop",
+//            "-Dlogging.level.root=OFF",
+//            "-Dlogging.level.org.springframework.web=OFF",
+//            "-Dlogging.level.jdbc.sqlonly=OFF",
+//            "-Dlogging.level.jdbc.sqltiming=OFF",
+//            "-Dlogging.level.jdbc.audit=OFF",
+//            "-Dlogging.level.jdbc.resultset=OFF",
+//            "-Dlogging.level.jdbc.resultsettable=OFF",
+//            "-Dlogging.level.jdbc.connection=OFF"
+//    ]
+//    classpath += sourceSets.main.runtimeClasspath
+//    main = "${mainClass}"
+//    doLast {
+//        Thread.sleep(15000)
+//    }
+//}
+//task stopServer {
+//    doLast {
+//        startServer.processHandle.abort()
+//    }
+//}
+webdriverBinaries {
+    chromedriver "73.0.3683.68"
+    geckodriver "0.24.0"
 }
 def drivers = ["chrome", "firefox"]
 drivers.each { driver ->
@@ -248,8 +317,13 @@ drivers.each { driver ->
         outputs.upToDateWhen { false }
         systemProperty "geb.env", driver
         exclude "ksbysample/**"
-        dependsOn startServer
-        finalizedBy stopServer
+// Gradle 5.3 で internal API が変更されて gradle-processes が動かなくなったのでコメントアウトする
+//        dependsOn startServer
+//        finalizedBy stopServer
+
+        testLogging {
+            afterSuite printTestCount
+        }
     }
 }
 task gebTest {
